# LANDRS_Babelfish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autopilot_interface.cpp  autopilot_interface.h  geomavlink.cpp  geomavlink.h  gpx_to_geojson.py  instantiationguide.md  mavlinkLD_interface.cpp  mavlinkLD_interface.h  serial_port.cpp  serial_port.h
GPXtoGeoJSON/: README.md  gpx_to_geojson.py  read_gpx.py
LANDRSbabelfish/: CMakeLists.txt
examples/logfiles/: 2019-03-18 17-38-16.log.gpx  2019-03-18 17-38-16.log.kml  2019-03-18 17-38-16.log.param  2019-03-18 17-38-16.log0wp.txt
mavlinkLD/include/: mavlink_interface.h
mavlinkLD/src/: mavlink_interface.cpp
